--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ h1 {
   font-size: 100px;
   font-family: 'Oswald';
   text-align: center;
+  border-style: solid;
 }
 
 p {
@@ -11,8 +12,7 @@ p {
 
 .header_div {
   background-color: #636363;
-  outline-color: #000000;
-  outline-style: solid;
+  border-style: solid;
   text-align: center;
   margin: 100px;
 }
