--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ p {
 }
 
 .header_div {
-  background-color: #636363;
+  background-color: #8c8c8c;
   border-style: solid;
   text-align: center;
   margin: 100px;
