--- a/main.css
+++ b/main.css
@@ -14,4 +14,5 @@ p {
   background-color: #8c8c8c;
   border-style: solid;
   text-align: center;
+  background-image: 'DSC_0891 - Amplified Colour.JPG';
 }
