--- a/main.css
+++ b/main.css
@@ -11,8 +11,7 @@ p {
 }
 
 .header_div {
-  /*background-color: #8c8c8c;*/
+  background-color: #8c8c8c;
   border-style: solid;
   text-align: center;
-  background-image: 'DSC_0891 - Amplified Colour.JPG';
 }
