--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ h1 {
   font-size: 100px;
   font-family: 'Oswald';
   text-align: center;
-  border-style: solid;
+  border-style: none;
 }
 
 p {
@@ -17,12 +17,12 @@ html, body {
 
 .header_div {
   background-color: #8c8c8c;
-  border-style: solid;
+  border-style: none;
   text-align: center;
 }
 
 #copyright {
-  font-size: 6px;
+  font-size: 10px;
   font-family: "Arial";
   text-align: center;
 }
