--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ h1 {
   font-family: 'Oswald';
   text-align: center;
   border-style: none;
-  background-color: #ffffff;
+  background-color: #ff0000;
 }
 
 html, body {
