--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ h1 {
 html {
   margin: 0;
   padding: 0;
-  background-image: url("DSC_0891 - Amplified Colour.JPG");
+  /*background-image: url("DSC_0891 - Amplified Colour.JPG");*/
 }
 
 body {
