--- a/main.css
+++ b/main.css
@@ -42,5 +42,8 @@ footer {
 
 #quote {
   font-family: "Oswald";
-  margin: 40px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
