--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ footer {
 #quote {
   font-family: "Oswald";
   margin-top: 80px;
-  margin-bottom: 70%px;
+  margin-bottom: 300px;
   margin-left: 10%;
   margin-right: 10%;
 }
