--- a/main.css
+++ b/main.css
@@ -40,10 +40,10 @@ footer {
   text-align: center;
 }
 
-.quote {
+.default_text {
   font-family: "Oswald";
   margin-top: 60px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
   margin-left: 10%;
   margin-right: 10%;
 }
