--- a/main.css
+++ b/main.css
@@ -41,6 +41,10 @@ footer {
   font-size: 12px;
   font-family: "Arial";
   text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .default_text {
