--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ footer {
   font-size: 12px;
   font-family: "Arial";
   text-align: center;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
