--- a/main.css
+++ b/main.css
@@ -54,3 +54,10 @@ footer {
   margin-bottom: 30px;
   display: block;
 }
+
+button:hover {
+  background-color:#595959;
+  position: relative;
+  bottom:4;
+  right: 4;
+}
