--- a/main.css
+++ b/main.css
@@ -61,8 +61,8 @@ button {
 }
 
 button:hover {
-  background-color:#ff0000;
+  background-color:#595959;
   position: relative;
-  bottom: 4px;
-  right: 4px;
+  top: 2px;
+  left: 2px;
 }
