--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ button:hover {
 }
 
 .subpage_top_left_logo {
-  width: 50;
-  height: 50;
-  margin: 25;
+  width: 25px;
+  height: 25px;
+  margin: 25px;
 }
