--- a/main.css
+++ b/main.css
@@ -68,7 +68,8 @@ button:hover {
 }
 
 .subpage_top_left_logo {
-  width: 50px;
-  height: 50px;
-  margin: 25px;
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  margin-bottom:0;
 }
