--- a/main.css
+++ b/main.css
@@ -82,5 +82,6 @@ button:hover {
   border: 2px solid black;
   background-color: #dddddd;
   margin: auto;
-  width: 100px;
+  width: 400px;
+  height: 250px;
 }
