--- a/main.css
+++ b/main.css
@@ -1,12 +1,18 @@
 h1 {
-  font-size: 100px;
   font-family: 'Oswald', 'Helvetica';
   text-align: center;
-  border-style: none;
 }
 
-h2, h3, h4 {
+h2 {
   font-family: 'Oswald', 'Helvetica';
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+h3 {
+  font-family: 'Oswald', 'Helvetica';
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 img {
