--- a/main.css
+++ b/main.css
@@ -7,12 +7,14 @@ h2 {
   font-family: 'Oswald', 'Helvetica';
   padding-left: 30px;
   padding-right: 30px;
+  color: #d9d9d9;
 }
 
 h3 {
   font-family: 'Oswald', 'Helvetica';
   padding-left: 45px;
   padding-right: 45px;
+  color: #d9d9d9;
 }
 
 img {
