--- a/main.css
+++ b/main.css
@@ -1,20 +1,21 @@
 h1 {
   font-family: 'Oswald', 'Helvetica';
   text-align: center;
+  color: #a6a6a6;
 }
 
 h2 {
   font-family: 'Oswald', 'Helvetica';
   padding-left: 30px;
   padding-right: 30px;
-  color: #d9d9d9;
+  color: #a6a6a6;
 }
 
 h3 {
   font-family: 'Oswald', 'Helvetica';
   padding-left: 45px;
   padding-right: 45px;
-  color: #d9d9d9;
+  color: #a6a6a6;
 }
 
 img {
