--- a/main.css
+++ b/main.css
@@ -6,22 +6,22 @@ h1 {
 
 h2 {
   font-family: 'Oswald', 'Helvetica';
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 4%;
+  padding-right: 4%;
   color: #a6a6a6;
 }
 
 h3 {
   font-family: 'Oswald', 'Helvetica';
-  padding-left: 45px;
-  padding-right: 45px;
+  padding-left: 6%;
+  padding-right: 6%;
   color: #a6a6a6;
 }
 
 p {
   font-family: 'Oswald', 'Helvetica';
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 8%;
+  padding-right: 8%;
   color: #a6a6a6;
 }
 
