--- a/main.css
+++ b/main.css
@@ -126,6 +126,8 @@ html, body {
 /* ---------------- Image Masking ---------------- */
 
 .image-mask {
+  width: 300px;   /* size of the visible shape */
+  height: 300px;
   background: url("Assets/maskBackground.jpg") center/cover no-repeat;
 
   -webkit-mask-image: url("Assets/bang.png"); /* or .png */
