--- a/main.css
+++ b/main.css
@@ -61,15 +61,15 @@ html, body {
   position: relative;
   z-index: 10; /* sits above parallax layers */
   display: grid;
-  grid-template-columns: 1fr minmax(600px, 3fr) 1fr; /* left - main - right */
-  gap: 2rem;
-  padding: 5vh 5vw;
-  align-items: start;
+  grid-template-columns: 1fr 3fr 1fr;
 }
 
 .main-column {
   grid-column: 2; /* center */
   text-align: center;
+  font-size: 6vw;
+  width: auto;
+  border: 3px solid black;
 }
 
 .left-column {
@@ -77,7 +77,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: flex-end; /* hug right edge */
-  gap: 1.5rem;
+  border: 3px solid black;
 }
 
 .right-column {
@@ -85,7 +85,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: flex-start; /* hug left edge */
-  gap: 1.5rem;
+  border: 3px solid black;
 }
 
 
@@ -120,8 +120,8 @@ html, body {
 
 /* ---------------- Image Masking ---------------- */
 .image-mask {
-  width: 300px;
-  height: 300px;
+  width: 5em;
+  height: 5em;
   background: url("Assets/maskBackground.jpg") center/cover no-repeat;
 
   -webkit-mask-image: url("Assets/parallelogram1.png");
@@ -131,6 +131,7 @@ html, body {
   mask-image: url("Assets/parallelogram1.png");
   mask-repeat: no-repeat;
   mask-size: contain;
+  border: 3px solid black;
 }
 
 
@@ -152,20 +153,4 @@ html, body {
 }
 .socials img:hover {
   transform: scale(1.1);
-}
-
-/* Responsive Handling */
-@media (max-width: 900px) {
-  .content {
-    grid-template-columns: 1fr; /* single column */
-    gap: 1rem;
-  }
-
-  .left-column, .right-column {
-    display: none; /* hide sidebars */
-  }
-
-  .main-column {
-    grid-column: 1; /* center becomes full-width */
-  }
 }
