--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ html, body {
 .map {
   width: 70%;
   height: 300px;
-  margin: 2rem auto;   /* centers it horizontally */
+  margin: 0 auto;   /* centers it horizontally */
   display: block;
 }
 
