--- a/main.css
+++ b/main.css
@@ -146,27 +146,39 @@ html, body {
   width: 70%;
   height: 300px;
   display: block;
+  border-radius: 12px;
 }
 
 .map-metrics {
+  background-color: #222;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   font-family: Monaco, monospace;
   font-size: 1rem;
   line-height: 1.5;
-  gap: 12px;               /* space between boxes */
-  margin-left: 20px;       /* space away from map */
+  margin-left: 0px;       /* space away from map */
+  border-radius: 12px;
+}
+
+.map-metrics h2 {
+	color: #D9D9D9;
+	padding: 12px 16px;
+	border-radius: 12px;
+	font-size: 18px;
+	line-height: 1.4;
+	margin: 4px;
 }
 
 .metric-box {
-  background-color: #222;   /* dark theme background */
+  background-color: #444;   /* dark theme background */
   color: #f4f4f4;           /* light text */
-  padding: 12px 16px;       /* breathing room */
+  padding: 8px 16px;       /* breathing room */
   border-radius: 12px;      /* rounded corners */
   box-shadow: 0 2px 6px rgba(0,0,0,0.5); /* soft shadow */
   font-size: 14px;
   line-height: 1.4;
+  margin: 12px;
 }
 
 
@@ -194,6 +206,7 @@ html, body {
     background-color: rgba(30,30,30,0.8) !important;
     color: #ccc !important;
     font-size: 12px;
+	padding-right: 8px;
 }
 .leaflet-control-attribution a {
     color: #FC4C02 !important;
