--- a/main.css
+++ b/main.css
@@ -159,6 +159,7 @@ html, body {
   line-height: 1.5;
   margin-left: 0px;       /* space away from map */
   border-radius: 12px;
+  height: 300px;
 }
 
 .map-metrics h2 {
@@ -179,6 +180,7 @@ html, body {
   font-size: 14px;
   line-height: 1.4;
   margin: 12px;
+  margin-top: 0px;
 }
 
 
