--- a/main.css
+++ b/main.css
@@ -47,13 +47,29 @@ html, body {
 }
 
 .layer3 {
-  background-image: url("Assets/cloudBackground.jpg");
+  background-image: url("Assets/cloud1e.jpg");
   z-index: 3;
+  -webkit-mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  mask-position: center;
 }
 
 .layer4 {
-  background-image: url("Assets/spaceBackground.jpg");
+  background-image: url("Assets/cloud1e.jpg");
   z-index: 4;
+  -webkit-mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  mask-position: center;
 }
 
 /* ---------------- Content Wrapper ---------------- */
