--- a/main.css
+++ b/main.css
@@ -72,6 +72,19 @@ html, body {
   mask-position: center;
 }
 
+.layer5 {
+  background-image: url("Assets/cloud1e.jpg");
+  z-index: 5;
+  -webkit-mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  mask-position: center;
+}
+
 /* ---------------- Content Wrapper ---------------- */
 .content {
   position: relative;
